# Avoid-Incoming

./: .gitignore  README.md
cmake/: FindSDL2_image.cmake  FindSDL2_mixer.cmake
graphics/: TwoLaneRoad.png~  restart_screen.png~
src/: CMakeLists.txt  HUD.cpp  HUD.hpp  TextureManager.cpp  TextureManager.h  common.h  compile_commands.json  draw_window.cpp  draw_window.hpp  entity.cpp  entity.hpp  input.cpp  input.h  main.cpp  physics.hpp  player.cpp  player.hpp  structs.h  text.cpp  text.h  traffic.cpp  traffic.hpp  util.cpp  util.hpp
