cmake_minimum_required(VERSION 3.18.4)
project(app)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
#target_compile_options(first-test PRIVATE -g)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../cmake")
list(APPEND CMAKE_PREFIX_PATH "home/ssp/c++/installed/")
find_package(SDL2 REQUIRED)
find_package(SDL2_image REQUIRED)
find_package(SDL2_mixer REQUIRED)
#find_package(SDL_ttf REQUIRED)
add_executable(app main.cpp draw_window.cpp draw_window.hpp common.h input.h input.cpp structs.h entity.cpp traffic.cpp util.cpp HUD.cpp player.cpp)
include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_MIXER_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIR} /usr/local/include/SDL2/)
target_link_libraries(app ${SDL2_LIBRARIES} ${SDL2_MIXER_LIBRARIES} ${SDL2IMAGE_LIBRARY}  ${SDL2TTF_LIBRARY} /usr/local/lib/libSDL2_ttf.so)
